--- a/NFTB.Mobile/NFTB.Mobile/UI/Pages/PlayerEditor.xaml
+++ b/NFTB.Mobile/NFTB.Mobile/UI/Pages/PlayerEditor.xaml
@@ -4,7 +4,7 @@
              xmlns:xfg="clr-namespace:XFGloss;assembly=XFGloss"
              xmlns:test="clr-namespace:NFTB.Mobile.UI.Pages;assembly=NFTB.Mobile"
              xmlns:components="clr-namespace:NFTB.Mobile.UI.Components;assembly=NFTB.Mobile"
-             x:Class="NFTB.Mobile.UI.Pages.TermList">
+             x:Class="NFTB.Mobile.UI.Pages.PlayerEditor">
 
     <StackLayout Style="{StaticResource main}">
         <Grid VerticalOptions="FillAndExpand">
@@ -14,14 +14,13 @@
             </Grid.RowDefinitions>
             <Label Text="Title Here mate" Grid.Row="0"></Label>
 
-            <ListView x:Name="TermListView" ItemsSource="{Binding TermList}" HasUnevenRows="True" Grid.Row="1">
+            <ListView ItemsSource="{Binding PlayerList}" HasUnevenRows="True" Grid.Row="1">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
                             <ViewCell.ContextActions>
-                                <MenuItem Command="{Binding Path=BindingContext.OnEditTerm, Source={x:Reference TermListView}}" CommandParameter="{Binding .}" Text="Edit"/>
-
-                                <MenuItem  Command="{Binding .}" Text="Delete" />
+                                <MenuItem  CommandParameter="{Binding .}" Text="Edit" />
+                                <MenuItem  CommandParameter="{Binding .}" Text="Delete" />
                             </ViewCell.ContextActions>
                             <StackLayout Style="{StaticResource listViewItem}">
                                 <Grid>
@@ -35,7 +34,8 @@
                                         <ColumnDefinition Width="5*"></ColumnDefinition>
                                         <ColumnDefinition Width="*"></ColumnDefinition>
                                     </Grid.ColumnDefinitions>
-                                    <Label Style="{StaticResource H1}" Text="{Binding Name}" Grid.Column="0" Grid.Row="0"></Label>
+
+                                    <Label Style="{StaticResource H1}" Text="Hey" Grid.Column="0" Grid.Row="0"></Label>
                                     <Label Text="Hey" Grid.Column="0" Grid.Row="1"></Label>
                                 </Grid>
                             </StackLayout>
@@ -43,7 +43,6 @@
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-            <Button Text="Get terms" Command="{Binding OnGetTerms}"></Button>
         </Grid>
   </StackLayout>
   
