--- a/NFTB.Mobile/NFTB.Mobile/UI/Content/Styles.xaml
+++ b/NFTB.Mobile/NFTB.Mobile/UI/Content/Styles.xaml
@@ -1,36 +1,47 @@
-﻿<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="NFTB.Mobile.UI.Content.Styles">
+﻿<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:xfg="clr-namespace:XFGloss;assembly=XFGloss"
+             x:Class="NFTB.Mobile.UI.Content.Styles">
   <ContentPage.Resources>
     <ResourceDictionary>
-      <Style TargetType="Label">
-        <Setter Property="TextColor" Value="#cca714"></Setter>
+      
+      
+      <Color x:Key="mainColor">#15141A</Color>
+      <Color x:Key="mainColorLight">#1D1B24</Color>
+      <Color x:Key="mainColorComp">#B27F25</Color>
+      <Color x:Key="mainColorOffSet">#FFFFFF</Color>
+
+      <Style x:Key="listViewItem" TargetType="StackLayout">
+        <Setter Property="HorizontalOptions" Value="CenterAndExpand"></Setter>
+        <Setter Property="VerticalOptions" Value="CenterAndExpand"></Setter>
+        <Setter Property="Margin" Value="0,10,0,0"></Setter>
+        <Setter Property="Padding" Value="10"></Setter>
+        <Setter Property="BackgroundColor" Value="{StaticResource mainColorLight}"></Setter>
       </Style>
+
+      <Style TargetType="Label">
+                <Setter Property="FontSize" Value="12"></Setter>
+                <Setter Property="VerticalOptions" Value="Center"></Setter>
+                <Setter Property="TextColor" Value="{StaticResource mainColorOffSet}"></Setter>
+            </Style>
 
       <Style x:Key="H1" TargetType="Label">
         <Setter Property="FontSize" Value="20"></Setter>
-        <Setter Property="TextColor" Value="White"></Setter>
+        <Setter Property="TextColor" Value="{StaticResource mainColorComp}"></Setter>
+        <Setter Property="VerticalOptions" Value="Center"></Setter>
       </Style>
 
-      <Style x:Key="main" TargetType="ScrollView">
+      <Style x:Key="main" TargetType="StackLayout">
         <Setter Property="HorizontalOptions" Value="FillAndExpand"></Setter>
         <Setter Property="VerticalOptions" Value="FillAndExpand"></Setter>
-        <Setter Property="BackgroundColor" Value="#223366"></Setter>
+        <Setter Property="BackgroundColor" Value="{StaticResource mainColor}"></Setter>
       </Style>
 
-      <Style x:Key="title" TargetType="StackLayout">
+    <Style x:Key="title" TargetType="StackLayout">
         <Setter Property="HorizontalOptions" Value="CenterAndExpand"></Setter>
         <Setter Property="BackgroundColor" Value="Black"></Setter>
       </Style>
-      
-      
-      <Style x:Key="buttonStyle" TargetType="Button">
-        <Setter Property="HorizontalOptions" Value="Center" />
-        <Setter Property="VerticalOptions" Value="CenterAndExpand" />
-        <Setter Property="BorderColor" Value="Lime" />
-        <Setter Property="BorderRadius" Value="5" />
-        <Setter Property="BorderWidth" Value="5" />
-        <Setter Property="WidthRequest" Value="200" />
-        <Setter Property="TextColor" Value="Teal" />
-      </Style>
+
     </ResourceDictionary>
   </ContentPage.Resources>
 </ContentPage>
