--- a/NFTB.Mobile/NFTB.Mobile/UI/Content/Styles.xaml
+++ b/NFTB.Mobile/NFTB.Mobile/UI/Content/Styles.xaml
@@ -1,11 +1,14 @@
 ﻿<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:xfg="clr-namespace:XFGloss;assembly=XFGloss"
+             xmlns:controls="clr-namespace:NFTB.Mobile.UI.Controls;assembly=NFTB.Mobile"
              x:Class="NFTB.Mobile.UI.Content.Styles">
   <ContentPage.Resources>
     <ResourceDictionary>
-      
-      
+
+      <controls:NegateBoolean x:Key="Negate"></controls:NegateBoolean>
+        
+    
+        
       <Color x:Key="mainColor">#15141A</Color>
       <Color x:Key="mainColorLight">#1D1B24</Color>
       <Color x:Key="mainColorComp">#B27F25</Color>
